--- a/football/39/2022/Regular Season - 20.json
+++ b/football/39/2022/Regular Season - 20.json
@@ -25,7 +25,7 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media.api-sports.io/football/leagues/39.png",
+            "logo": "https://media-1.api-sports.io/football/leagues/39.png",
             "flag": "https://media.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 20"
@@ -93,7 +93,7 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media.api-sports.io/football/leagues/39.png",
+            "logo": "https://media-1.api-sports.io/football/leagues/39.png",
             "flag": "https://media.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 20"
@@ -102,13 +102,13 @@
             "home": {
                 "id": 55,
                 "name": "Brentford",
-                "logo": "https://media-1.api-sports.io/football/teams/55.png",
+                "logo": "https://media.api-sports.io/football/teams/55.png",
                 "winner": null
             },
             "away": {
                 "id": 35,
                 "name": "Bournemouth",
-                "logo": "https://media-1.api-sports.io/football/teams/35.png",
+                "logo": "https://media.api-sports.io/football/teams/35.png",
                 "winner": null
             }
         },
@@ -161,7 +161,7 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media.api-sports.io/football/leagues/39.png",
+            "logo": "https://media-1.api-sports.io/football/leagues/39.png",
             "flag": "https://media.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 20"
@@ -170,7 +170,7 @@
             "home": {
                 "id": 51,
                 "name": "Brighton",
-                "logo": "https://media-1.api-sports.io/football/teams/51.png",
+                "logo": "https://media.api-sports.io/football/teams/51.png",
                 "winner": null
             },
             "away": {
@@ -229,7 +229,7 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media.api-sports.io/football/leagues/39.png",
+            "logo": "https://media-1.api-sports.io/football/leagues/39.png",
             "flag": "https://media.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 20"
@@ -238,7 +238,7 @@
             "home": {
                 "id": 49,
                 "name": "Chelsea",
-                "logo": "https://media.api-sports.io/football/teams/49.png",
+                "logo": "https://media-1.api-sports.io/football/teams/49.png",
                 "winner": null
             },
             "away": {
@@ -297,7 +297,7 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media.api-sports.io/football/leagues/39.png",
+            "logo": "https://media-1.api-sports.io/football/leagues/39.png",
             "flag": "https://media.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 20"
@@ -306,13 +306,13 @@
             "home": {
                 "id": 45,
                 "name": "Everton",
-                "logo": "https://media-1.api-sports.io/football/teams/45.png",
+                "logo": "https://media.api-sports.io/football/teams/45.png",
                 "winner": null
             },
             "away": {
                 "id": 41,
                 "name": "Southampton",
-                "logo": "https://media.api-sports.io/football/teams/41.png",
+                "logo": "https://media-1.api-sports.io/football/teams/41.png",
                 "winner": null
             }
         },
@@ -365,7 +365,7 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media.api-sports.io/football/leagues/39.png",
+            "logo": "https://media-1.api-sports.io/football/leagues/39.png",
             "flag": "https://media.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 20"
@@ -433,7 +433,7 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media.api-sports.io/football/leagues/39.png",
+            "logo": "https://media-1.api-sports.io/football/leagues/39.png",
             "flag": "https://media.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 20"
@@ -442,13 +442,13 @@
             "home": {
                 "id": 34,
                 "name": "Newcastle",
-                "logo": "https://media.api-sports.io/football/teams/34.png",
+                "logo": "https://media-1.api-sports.io/football/teams/34.png",
                 "winner": null
             },
             "away": {
                 "id": 36,
                 "name": "Fulham",
-                "logo": "https://media-1.api-sports.io/football/teams/36.png",
+                "logo": "https://media.api-sports.io/football/teams/36.png",
                 "winner": null
             }
         },
@@ -501,7 +501,7 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media.api-sports.io/football/leagues/39.png",
+            "logo": "https://media-1.api-sports.io/football/leagues/39.png",
             "flag": "https://media.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 20"
@@ -516,7 +516,7 @@
             "away": {
                 "id": 46,
                 "name": "Leicester",
-                "logo": "https://media.api-sports.io/football/teams/46.png",
+                "logo": "https://media-1.api-sports.io/football/teams/46.png",
                 "winner": null
             }
         },
@@ -569,7 +569,7 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media.api-sports.io/football/leagues/39.png",
+            "logo": "https://media-1.api-sports.io/football/leagues/39.png",
             "flag": "https://media.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 20"
@@ -584,7 +584,7 @@
             "away": {
                 "id": 42,
                 "name": "Arsenal",
-                "logo": "https://media-1.api-sports.io/football/teams/42.png",
+                "logo": "https://media.api-sports.io/football/teams/42.png",
                 "winner": null
             }
         },
@@ -637,7 +637,7 @@
             "id": 39,
             "name": "Premier League",
             "country": "England",
-            "logo": "https://media.api-sports.io/football/leagues/39.png",
+            "logo": "https://media-1.api-sports.io/football/leagues/39.png",
             "flag": "https://media.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 20"
@@ -652,7 +652,7 @@
             "away": {
                 "id": 48,
                 "name": "West Ham",
-                "logo": "https://media.api-sports.io/football/teams/48.png",
+                "logo": "https://media-1.api-sports.io/football/teams/48.png",
                 "winner": null
             }
         },
